--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/emailable-report.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/emailable-report.html
@@ -8,14 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">42</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">52</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.service.OperationTest</td><td><a href="#m0">addTest</a></td><td rowspan="1">1687856498224</td><td rowspan="1">10</td></tr><tr class="passedeven"><td><a href="#m1">divTest</a></td><td rowspan="1">1687856498236</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">mulTest</a></td><td rowspan="1">1687856498238</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">subTest</a></td><td rowspan="1">1687856498241</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.service.EmployeeServiceTest</td><td><a href="#m0">getAllEmployeeTest</a></td><td rowspan="1">1687858586075</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m1">searchEmployeeTest</a></td><td rowspan="1">1687858586088</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m2">storeEmployeeTest</a></td><td rowspan="1">1687858586089</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="4">com.service.OperationTest</td><td><a href="#m3">addTest</a></td><td rowspan="1">1687858586092</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m4">divTest</a></td><td rowspan="1">1687858586094</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m5">mulTest</a></td><td rowspan="1">1687858586096</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m6">subTest</a></td><td rowspan="1">1687858586097</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.service.OperationTest#addTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.service.OperationTest#divTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.service.OperationTest#mulTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.service.OperationTest#subTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.service.EmployeeServiceTest#getAllEmployeeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.service.EmployeeServiceTest#searchEmployeeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.service.EmployeeServiceTest#storeEmployeeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.service.OperationTest#addTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.service.OperationTest#divTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.service.OperationTest#mulTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.service.OperationTest#subTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
