--- a/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Suite/toc.html
+++ b/Phase 5/Testing Programs/TestNGSampleExample/test-output/old/Suite/toc.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-<title>Results for Default suite</title>
+<title>Results for Suite</title>
 <link href="../testng.css" rel="stylesheet" type="text/css" />
 <link href="../my-testng.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<h3><p align="center">Results for<br/><em>Default suite</em></p></h3>
+<h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
 <td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>3 methods:<br/>
+<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
+<td>7 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -22,8 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Default test (3/0/0)</td><td valign='top' align='right'>
-  <a href='Default test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Test (7/0/0)</td><td valign='top' align='right'>
+  <a href='Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
